# linphone-iphone

./: .clang-format  .cproject  .git-pre-commit  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .travis.yaml  .travis.yml  AUTHORS  AppIntentVocabulary.plist  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  FindLinphone.cmake  GoogleService-Info.plist  ImageOptim.sh  LICENCE  Linphone.clr  Makefile.am  NEWS  PhoneMainView.xib  Podfile  README  README.M68k.txt  README.arm  README.macos  README.macos.md  README.md  README.mingw  README.tunnel  README.zrtp  Shared.xcconfig  TODO  UI.md  autogen.sh  buschjaeger-Info.plist  castel-Info.plist  castel.xsd  (+30 more)
console/: CMakeLists.txt  Makefile.am  TODO  commands.c  linphonec.c  linphonec.h  shell.c  sipomatic.c  wav2raw.c
coreapi/: .gitignore  CMakeLists.txt  Call.cc  CallLog.cc  CardDav.cc  ChatFileTransfer.cc  Conference.cc  Config.cc  ContactProvider.cc  Core.cc  Enum.cc  Friend.cc  FriendList.cc  ImEncryptionEngine.cc  Info.cc  LdapProvider.cc  Lime.cc  Lime.h  Lpc2Xml.cc  Makefile.am  MessageStorage.cc  Misc.cc  NatPolicy.cc  OfferAnswer.cc  OfferAnswer.h  PayloadType.cc  Presence.cc  Proxy.cc  RemoteProvisioning.cc  Sal.cc  SipLogin.cc  Sqlite3BctbxVfs.cc  Tunnel.cc  TunnelConfig.cc  TunnelManager.cc  TunnelManager.hh  Vcard.cc  VideoDefinition.cc  Vtables.cc  Xml2Lpc.cc  (+137 more)
coreapi/bellesip_sal/: sal_address_impl.c  sal_impl.c  sal_impl.cc  sal_impl.h  sal_op_call.c  sal_op_call.cc  sal_op_call_transfer.c  sal_op_call_transfer.cc  sal_op_events.c  sal_op_impl.c  sal_op_impl.cc  sal_op_info.c  sal_op_message.c  sal_op_message.cc  sal_op_presence.c  sal_op_presence.cc  sal_op_publish.c  sal_op_registration.c  sal_op_registration.cc  sal_sdp.c  sal_sdp.cc
coreapi/help/: CMakeLists.txt  Doxyfile.in  Makefile.am  buddy_status.c  chatroom.c  doxygen.dox  doxygen.dox.in  filetransfer.c  generate_javadoc.sh.in  helloworld.c  notify.c  realtimetext_receiver.c  realtimetext_sender.c  registration.c
coreapi/ldap/: ldapprovider.c  ldapprovider.h
coreapi/sal/: call_op.cpp  call_op.h  event_op.cpp  event_op.h  message_op.cpp  message_op.h  message_op_interface.h  presence_op.cpp  presence_op.h  register_op.cpp  register_op.h  sal.c  sal.cpp  sal.h  sal.hpp  sal_op.cpp  sal_op.h
daemon/: CMakeLists.txt  Makefile.am  daemon-pipetest.c  daemon.cc  daemon.h
daemon/commands/: adaptive-jitter-compensation.cc  adaptive-jitter-compensation.h  answer.cc  answer.h  audio-codec-disable.cc  audio-codec-disable.h  audio-codec-enable.cc  audio-codec-enable.h  audio-codec-get.cc  audio-codec-get.h  audio-codec-move.cc  audio-codec-move.h  audio-codec-set.cc  audio-codec-set.h  audio-codec-toggle.cc  audio-codec-toggle.h  audio-stream-start.cc  audio-stream-start.h  audio-stream-stats.cc  audio-stream-stats.h  audio-stream-stop.cc  audio-stream-stop.h  auth-infos-clear.cc  call-mute.h  (+65 more)
gtk/: .directory  .gitignore  CMakeLists.txt  Makefile.am  about.ui  audio_assistant.c  audio_assistant.ui  buddylookup.c  buddylookup.ui  call_logs.ui  call_statistics.ui  callee_frame.ui  calllogs.c  chat.c  chat_view.ui  chatroom.ui  chatroom_frame.ui  conf_callee_view.ui  conf_frame.ui  conf_view.ui  conference.c  config-fetching.c  config-uri.ui  contact.ui  dscp_settings.ui  fonis.c  friendlist.c  gtkrc.mac  in_call_frame.ui  in_call_view.ui  incall_view.c  incoming_call.ui  keypad.ui  ldap.ui  linphone.h  log.ui  logging.c  login_frame.ui  loginframe.c  mac.m  (+23 more)
include/: CMakeLists.txt  Makefile.am
java/: CMakeLists.txt
linphone/: .cvsignore  .gitignore  BUGS  ChangeLog  Makefile.am  NEWS  README  README.CVS  README.macos  README.mingw  README.mingwce  README.win32  TODO  autogen.sh  build.mk  configure.in  gen-gtkfilelist.sh  gtk+-2.16.2.filelist  gtk+-2.18.5.filelist  intltool-update.in  linphone-deps.filelist  linphone.iss.in  linphone.kdevelop  linphone.kdevprj  linphone2-gtk.glade  linphone2.glade  make_exosip.sh  mingw-envsetup.sh  reconfig-SuSE
media_api/: DESIGN.txt  Makefile.am  basiccall.c  basiccall.h  callmember.c  ccl  common.h  media_api.c  media_api.h  mediaflow.c
p2pproxy/: .classpath  .cvsignore  .gcjbuilder  .project  Makefile  Makefile.am  Makefile.in  aclocal.m4  build.xml  config.status  configure  configure.ac  libtool  log4j.properties
pixmaps/: .directory  CMakeLists.txt  Makefile.am  linphone.icns
po/: .gitignore  CMakeLists.txt  POTFILES.in  POTFILES.skip  README  ar.po  cs.po  de.po  de_DE.po  es.po  fi.po  fr.po  he.po  hu.po  it.po  ja.po  linphone.pot  lt.po  nb_NO.po  nl.po  pl.po  pt_BR.po  ru.po  sr.po  sv.po  tr.po  zh_CN.po  zh_TW.po
share/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.inc  archived-rootca.pem  audio-assistant.desktop.in  cpim_grammar  dont_wait_too_long.mkv  linphone.appdata.xml  linphone.desktop  linphone.desktop.in  linphone.gnorba  linphone.pc.in  linphone_applet.desktop  rootca.cmake
src/: CMakeLists.txt  enums.h
tester/: CMakeLists.txt  Makefile.am  README  TesterAppDelegate.h  TesterAppDelegate.m  ZIDCache.xml  ZIDCacheAlice.xml  ZIDCacheBob.xml  `  account_creator_tester.c  accountmanager.c  audio_bypass_tester.c  audio_bypass_wav_header.h  call_multi_tester.c  call_multicast_tester.c  call_single_tester.c  call_tester.c  call_video_tester.c  clonable-object-tester.cpp  complex_sip_call.c  complex_sip_call_tester.c  complex_sip_case_tester.c  conference-event-tester.cpp  conference-tester.cpp  confeventpackage_tester.cpp  content-manager-tester.cpp  contents-tester.cpp  cpim-tester.cpp  cpim_tester.cpp  dtmf_tester.c  empty_rc  eventapi_tester.c  events-db-tester.cpp  flexisip.conf  flexisip_tester.c  group_chat_tester.c  laure_rc  liblinphone_completion  liblinphone_tester.c  liblinphone_tester.h  (+52 more)
tools/: CMakeLists.txt  Makefile.am  abstractapi.py  auto_answer.c  genapixml.py  generator.cc  generator.hh  genwrappers.cc  linphone-sample.py  lpc2xml.c  lpc2xml.h  lpc2xml_jni.cc  lpc2xml_test.c  lpconfig_items.py  lpsendmsg.c  metadoc.py  metaname.py  my_jni.h  software-desc.cc  software-desc.hh  test_ecc.c  test_lsd.c  test_numbers.c  xml2lpc.c  xml2lpc_jni.cc  xml2lpc_test.c
(+5478 files in other folders)
